--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
+    <title>Final Project</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -39,8 +39,6 @@
           id="city-input"
           class="form-control"
           placeholder="Search  by city  name"
-          aria-label="Recipient's username"
-          aria-describedby="button-addon2"
         />
         <button class="btn btn-outline-secondary" type="submit">
           Search
@@ -53,7 +51,7 @@
           <div class="col-sm-6">
             <h3 class="text-primary" id="city"></h3>
             <h3 class="text-primary" id="date"></h3>
-            <p id="description"></p>
+            <p id="description" class="text-secondary-emphasis"></p>
           </div>
           <div class="col-sm-6">
             <div class="d-flex align-items-center">
@@ -70,10 +68,11 @@
             </ul>
           </div>
         </div>
+        <div class="forecast-row mt-4" id="forecast"></div>
       </div>
     </main>
     <h3 class="footer">
-      <a href="https://github.com/Ekkos1/vanilla-weather-app-10">My github</a>
+      <a href="https://github.com/Ekkos1/final-project">My github</a>
     </h3>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
